--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_NAME=mydb
-JWT_SECRET=mysecretkey
-JWT_EXPIRES_IN=3600
+PORT=5000
+NODE_ENV=development
+DATABASE_URL="postgresql://postgres:root@localhost:5432/dev_commenter_local?sslmode=disable"
+JWT_SECRET="Ajj17s6kZkUQlLocUrADF1a8H47uRxTwtM1d84FT24M"
+JWT_EXPIRES_IN="3600"
+API_PREFIX='api'
