--- a/package.json
+++ b/package.json
@@ -34,11 +34,16 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "figlet": "^1.8.0",
+    "helmet": "^8.0.0",
+    "nestjs-zod": "^4.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.13.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "zod": "^3.24.1",
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.2",
