--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "drizzle-orm": "^0.39.3",
     "figlet": "^1.8.0",
     "helmet": "^8.0.0",
     "nestjs-zod": "^4.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.13.1",
+    "pg": "^8.13.3",
     "typeorm": "^0.3.20",
     "zod": "^3.24.1",
     "zod-validation-error": "^3.4.0"
@@ -57,6 +58,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "drizzle-kit": "^0.30.4",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
